--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "إعدادات الجلسة · {{name}}",
     "title": "إعدادات"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "المحادثة",
+      "layout": "التخطيط",
+      "system": "النظام"
+    },
+    "title": "اختصارات لوحة المفاتيح"
+  },
   "llm": {
     "aesGcm": "سيتم استخدام خوارزمية التشفير <1>AES-GCM</1> لتشفير مفتاحك وعنوان الوكيل",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "المساعد الافتراضي",
     "common": "إعدادات عامة",
     "experiment": "تجربة",
+    "hotkey": "اختصارات لوحة المفاتيح",
     "llm": "نموذج اللغة",
     "provider": "مزود خدمة الذكاء الاصطناعي",
     "sync": "مزامنة السحابة",
