--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Настройки на сесията · {{name}}",
     "title": "Настройки"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Разговор",
+      "layout": "Оформление",
+      "system": "Система"
+    },
+    "title": "Бързи клавиши"
+  },
   "llm": {
     "aesGcm": "Вашият ключ и адрес на агента ще бъдат криптирани с алгоритъма за криптиране <1>AES-GCM</1>",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Агент по подразбиране",
     "common": "Общи настройки",
     "experiment": "Експеримент",
+    "hotkey": "Бързи клавиши",
     "llm": "Езиков модел",
     "provider": "AI доставчик",
     "sync": "Синхронизиране в облака",
