--- a/locales/fa-IR/setting.json
+++ b/locales/fa-IR/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "تنظیمات جلسه · {{name}}",
     "title": "تنظیمات"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "گفتگو",
+      "layout": "چیدمان",
+      "system": "سیستم"
+    },
+    "title": "کلیدهای میانبر"
+  },
   "llm": {
     "aesGcm": "کلید و آدرس پروکسی شما با استفاده از الگوریتم رمزنگاری <1>AES-GCM</1> رمزگذاری خواهد شد",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "دستیار پیش‌فرض",
     "common": "تنظیمات عمومی",
     "experiment": "آزمایش",
+    "hotkey": "کلیدهای میانبر",
     "llm": "مدل زبان",
     "provider": "ارائه دهنده خدمات هوش مصنوعی",
     "sync": "همگام‌سازی ابری",
