--- a/locales/pl-PL/setting.json
+++ b/locales/pl-PL/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Ustawienia sesji · {{name}}",
     "title": "Ustawienia"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Rozmowa",
+      "layout": "Układ",
+      "system": "System"
+    },
+    "title": "Skróty klawiszowe"
+  },
   "llm": {
     "aesGcm": "Twój klucz, adres proxy i inne będą szyfrowane za pomocą algorytmu szyfrowania <1>AES-GCM</1>",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Domyślny asystent",
     "common": "Ustawienia ogólne",
     "experiment": "Eksperyment",
+    "hotkey": "Skróty klawiszowe",
     "llm": "Model językowy",
     "provider": "Dostawca usług AI",
     "sync": "Synchronizacja w chmurze",
