--- a/locales/ru-RU/setting.json
+++ b/locales/ru-RU/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Настройки сеанса · {{name}}",
     "title": "Настройки"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Беседа",
+      "layout": "Макет",
+      "system": "Система"
+    },
+    "title": "Горячие клавиши"
+  },
   "llm": {
     "aesGcm": "Ваши ключи и адреса агентов будут зашифрованы с использованием алгоритма шифрования <1>AES-GCM</1>",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Помощник по умолчанию",
     "common": "Общие настройки",
     "experiment": "Эксперимент",
+    "hotkey": "Горячие клавиши",
     "llm": "Языковая модель",
     "provider": "Поставщик ИИ услуг",
     "sync": "Синхронизация с облаком",
