--- a/locales/de-DE/setting.json
+++ b/locales/de-DE/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Sitzungseinstellungen · {{name}}",
     "title": "Einstellungen"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Gespräch",
+      "layout": "Layout",
+      "system": "System"
+    },
+    "title": "Tastenkombinationen"
+  },
   "llm": {
     "aesGcm": "Ihr Schlüssel und Ihre Proxy-Adresse werden mit dem <1>AES-GCM</1> Verschlüsselungsalgorithmus verschlüsselt.",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Standard-Assistent",
     "common": "Allgemeine Einstellungen",
     "experiment": "Experiment",
+    "hotkey": "Tastenkombinationen",
     "llm": "Sprachmodell",
     "provider": "KI-Dienstanbieter",
     "sync": "Cloud-Synchronisierung",
