--- a/locales/en-US/setting.json
+++ b/locales/en-US/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Session Settings · {{name}}",
     "title": "Settings"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Conversation",
+      "layout": "Layout",
+      "system": "System"
+    },
+    "title": "Hotkeys"
+  },
   "llm": {
     "aesGcm": "Your keys and proxy address will be encrypted using the <1>AES-GCM</1> encryption algorithm",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Default Assistant",
     "common": "Common Settings",
     "experiment": "Experiment",
+    "hotkey": "Hotkeys",
     "llm": "Language Model",
     "provider": "AI Service Provider",
     "sync": "Cloud Sync",
