--- a/locales/es-ES/setting.json
+++ b/locales/es-ES/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Configuración de la sesión · {{name}}",
     "title": "Configuración"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Conversación",
+      "layout": "Diseño",
+      "system": "Sistema"
+    },
+    "title": "Atajos de teclado"
+  },
   "llm": {
     "aesGcm": "Su clave y dirección del agente se cifrarán utilizando el algoritmo de cifrado <1>AES-GCM</1>",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Asistente predeterminado",
     "common": "Configuración común",
     "experiment": "Experimento",
+    "hotkey": "Atajos de teclado",
     "llm": "Modelo de lenguaje",
     "provider": "Proveedor de servicios de IA",
     "sync": "Sincronización en la nube",
