--- a/locales/ko-KR/setting.json
+++ b/locales/ko-KR/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "세션 설정 · {{name}}",
     "title": "설정"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "대화",
+      "layout": "레이아웃",
+      "system": "시스템"
+    },
+    "title": "단축키"
+  },
   "llm": {
     "aesGcm": "귀하의 키 및 프록시 주소는 <1>AES-GCM</1> 암호화 알고리즘을 사용하여 암호화됩니다",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "기본 에이전트",
     "common": "일반 설정",
     "experiment": "실험",
+    "hotkey": "단축키",
     "llm": "언어 모델",
     "provider": "AI 서비스 제공자",
     "sync": "클라우드 동기화",
