--- a/locales/vi-VN/setting.json
+++ b/locales/vi-VN/setting.json
@@ -42,6 +42,14 @@
     "sessionWithName": "Cài đặt cuộc trò chuyện · {{name}}",
     "title": "Cài đặt"
   },
+  "hotkey": {
+    "group": {
+      "conversation": "Cuộc trò chuyện",
+      "layout": "Bố cục",
+      "system": "Hệ thống"
+    },
+    "title": "Phím tắt"
+  },
   "llm": {
     "aesGcm": "Khóa và địa chỉ proxy của bạn sẽ được mã hóa bằng thuật toán mã hóa <1>AES-GCM</1>",
     "apiKey": {
@@ -425,6 +433,7 @@
     "agent": "Trợ lý mặc định",
     "common": "Cài đặt chung",
     "experiment": "Thử nghiệm",
+    "hotkey": "Phím tắt",
     "llm": "Mô hình ngôn ngữ",
     "provider": "Nhà cung cấp AI",
     "sync": "Đồng bộ trên đám mây",
