--- a/locales/bg-BG/setting.json
+++ b/locales/bg-BG/setting.json
@@ -43,11 +43,15 @@
     "title": "Настройки"
   },
   "hotkey": {
+    "conflicts": "Конфликт с текущите клавишни комбинации",
     "group": {
       "conversation": "Разговор",
       "layout": "Оформление",
       "system": "Система"
     },
+    "invalidCombination": "Клавишната комбинация трябва да съдържа поне един модификатор (Ctrl, Alt, Shift) и един обикновен клавиш",
+    "record": "Натиснете клавиш, за да запишете клавишна комбинация",
+    "reset": "Нулиране до подразбиращите се клавишни комбинации",
     "title": "Бързи клавиши"
   },
   "llm": {
