--- a/locales/fa-IR/setting.json
+++ b/locales/fa-IR/setting.json
@@ -43,11 +43,15 @@
     "title": "تنظیمات"
   },
   "hotkey": {
+    "conflicts": "تداخل با کلیدهای میانبر موجود",
     "group": {
       "conversation": "گفتگو",
       "layout": "چیدمان",
       "system": "سیستم"
     },
+    "invalidCombination": "کلیدهای میانبر باید حداقل شامل یک کلید اصلاحی (Ctrl, Alt, Shift) و یک کلید معمولی باشند",
+    "record": "برای ضبط کلید میانبر، کلید را فشار دهید",
+    "reset": "بازنشانی به کلیدهای میانبر پیش‌فرض",
     "title": "کلیدهای میانبر"
   },
   "llm": {
