--- a/locales/it-IT/setting.json
+++ b/locales/it-IT/setting.json
@@ -43,11 +43,15 @@
     "title": "Impostazioni"
   },
   "hotkey": {
+    "conflicts": "In conflitto con i tasti di scelta rapida esistenti",
     "group": {
       "conversation": "Conversazione",
       "layout": "Layout",
       "system": "Sistema"
     },
+    "invalidCombination": "La combinazione di tasti deve contenere almeno un tasto modificatore (Ctrl, Alt, Shift) e un tasto normale",
+    "record": "Premi un tasto per registrare la scorciatoia",
+    "reset": "Ripristina le scorciatoie predefinite",
     "title": "Scorciatoie"
   },
   "llm": {
