--- a/locales/ru-RU/setting.json
+++ b/locales/ru-RU/setting.json
@@ -43,11 +43,15 @@
     "title": "Настройки"
   },
   "hotkey": {
+    "conflicts": "Конфликт с существующими горячими клавишами",
     "group": {
       "conversation": "Беседа",
       "layout": "Макет",
       "system": "Система"
     },
+    "invalidCombination": "Горячая клавиша должна содержать как минимум одну модификаторную клавишу (Ctrl, Alt, Shift) и одну обычную клавишу",
+    "record": "Нажмите клавишу для записи горячей клавиши",
+    "reset": "Сбросить на стандартные горячие клавиши",
     "title": "Горячие клавиши"
   },
   "llm": {
