--- a/locales/ar/setting.json
+++ b/locales/ar/setting.json
@@ -43,11 +43,15 @@
     "title": "إعدادات"
   },
   "hotkey": {
+    "conflicts": "يتعارض مع اختصارات لوحة المفاتيح الحالية",
     "group": {
       "conversation": "المحادثة",
       "layout": "التخطيط",
       "system": "النظام"
     },
+    "invalidCombination": "يجب أن تحتوي اختصارات لوحة المفاتيح على مفتاح تعديل واحد على الأقل (Ctrl، Alt، Shift) ومفتاح عادي واحد",
+    "record": "اضغط على المفتاح لتسجيل اختصار لوحة المفاتيح",
+    "reset": "إعادة تعيين إلى اختصارات لوحة المفاتيح الافتراضية",
     "title": "اختصارات لوحة المفاتيح"
   },
   "llm": {
