--- a/locales/es-ES/setting.json
+++ b/locales/es-ES/setting.json
@@ -43,11 +43,15 @@
     "title": "Configuración"
   },
   "hotkey": {
+    "conflicts": "Conflicto con las teclas de acceso rápido existentes",
     "group": {
       "conversation": "Conversación",
       "layout": "Diseño",
       "system": "Sistema"
     },
+    "invalidCombination": "La combinación de teclas de acceso rápido debe incluir al menos una tecla modificadora (Ctrl, Alt, Shift) y una tecla normal",
+    "record": "Presiona una tecla para grabar la tecla de acceso rápido",
+    "reset": "Restablecer a las teclas de acceso rápido predeterminadas",
     "title": "Atajos de teclado"
   },
   "llm": {
