--- a/locales/ja-JP/setting.json
+++ b/locales/ja-JP/setting.json
@@ -43,11 +43,15 @@
     "title": "設定"
   },
   "hotkey": {
+    "conflicts": "既存のショートカットキーと衝突しています",
     "group": {
       "conversation": "会話",
       "layout": "レイアウト",
       "system": "システム"
     },
+    "invalidCombination": "ショートカットキーには少なくとも1つの修飾キー（Ctrl、Alt、Shift）と1つの通常のキーが必要です",
+    "record": "ショートカットキーを録音するにはキーを押してください",
+    "reset": "デフォルトのショートカットキーにリセット",
     "title": "ショートカットキー"
   },
   "llm": {
