--- a/locales/ko-KR/setting.json
+++ b/locales/ko-KR/setting.json
@@ -43,11 +43,15 @@
     "title": "설정"
   },
   "hotkey": {
+    "conflicts": "기존 단축키와 충돌",
     "group": {
       "conversation": "대화",
       "layout": "레이아웃",
       "system": "시스템"
     },
+    "invalidCombination": "단축키는 최소한 하나의 수정 키(Ctrl, Alt, Shift)와 하나의 일반 키를 포함해야 합니다",
+    "record": "단축키를 녹음하려면 키를 누르세요",
+    "reset": "기본 단축키로 재설정",
     "title": "단축키"
   },
   "llm": {
