--- a/locales/tr-TR/setting.json
+++ b/locales/tr-TR/setting.json
@@ -43,11 +43,15 @@
     "title": "Ayarlar"
   },
   "hotkey": {
+    "conflicts": "Mevcut kısayol tuşlarıyla çakışıyor",
     "group": {
       "conversation": "Sohbet",
       "layout": "Düzen",
       "system": "Sistem"
     },
+    "invalidCombination": "Kısayol tuşu en az bir modifiye tuşu (Ctrl, Alt, Shift) ve bir normal tuş içermelidir",
+    "record": "Kısayol tuşunu kaydetmek için tuşa basın",
+    "reset": "Varsayılan kısayol tuşlarına sıfırla",
     "title": "Kısayollar"
   },
   "llm": {
