--- a/locales/zh-TW/setting.json
+++ b/locales/zh-TW/setting.json
@@ -43,11 +43,15 @@
     "title": "設定"
   },
   "hotkey": {
+    "conflicts": "與現有快捷鍵衝突",
     "group": {
       "conversation": "對話",
       "layout": "佈局",
       "system": "系統"
     },
+    "invalidCombination": "快捷鍵需要至少包含一個修飾鍵 (Ctrl, Alt, Shift) 和一個常規鍵",
+    "record": "按下按鍵以錄製快捷鍵",
+    "reset": "重置為預設快捷鍵",
     "title": "快速鍵"
   },
   "llm": {
